--- a/termos.html
+++ b/termos.html
@@ -78,7 +78,7 @@
                 <p class="px-5 mb-4" id="section-terms-paragraph">Estes Termos e Condições serão regidos e interpretados de acordo com as leis vigentes do país em que o site opera. Quaisquer disputas decorrentes destes Termos e Condições serão resolvidas nos tribunais competentes.</p>
 
                 <h6 class="px-5">10. Contato</h6>                
-                <p class="px-5 mb-4" id="section-terms-paragraph">Caso tenha qualquer dúvida sobre estes Termos e Condições, entre em contato conosco através do e-mail fornecido na seção de contato do site.</p>
+                <p class="px-5 mb-4" id="section-terms-paragraph">Caso tenha qualquer dúvida sobre estes Termos e Condições, entre em contato conosco através do e-mail legal@techdeal.com.</p>
 
                 <p class="px-5" id="section-terms-paragraph">Ao utilizar o site, você confirma que leu, entendeu e concorda com os presentes Termos e Condições.</p>                
 
