--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CDN Link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- Folha de Estilos -->
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -21,7 +21,7 @@
                 <div class="container-fluid p-0">
                     
                     <div class="d-flex justify-content-center align-items-center gap-1">
-                        <img class="img-fluid" src="/Assets/offer-icon.png " width="30px" height="30px" alt="">
+                        <img class="img-fluid" src="Assets/offer-icon.png " width="30px" height="30px" alt="">
                         <a class="navbar-brand m-0" id="logo" href="index.html">TECH DEAL</a>
                     </div>
 
