--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Folha de Estilos -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="Assets/offer-icon.png"/>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                             <li><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="sobre.html">Sobre nós</a></li>
                             <li><a class="nav-link" href="termos.html">Nossos Termos</a></li>
-                            <li><a type="button" href="cadastro.html" class="btn btn-danger">Cadastro de Oferta</a></li>                               
+                            <li><a type="button" href="cadastro.html" class="btn btn-danger">Cadastro de Ofertas</a></li>                               
                         </ul>
                 </div>
 
