--- a/termos.html
+++ b/termos.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Encontre e compartilhe as melhores ofertas de informática! Catálogo colaborativo com promoções de várias lojas. Solicite e consulte ofertas exclusivas.">
         <meta name="author" content="Felipe Garrido - Web Developer">
+        <!-- <meta name="robots" content="noindex"/> Essa TAG passa instruções para os robôs dos motores de pesquisa, mas como a instrução do robô é sempre "follow" e eu não desejo configuar exceções para indexação das páginas deixarei essa tag comentada.-->    
         <title>TECH DEAL: Compartilhe e encontre as melhores ofertas em informática</title>
         <!-- Bootstrap CDN Link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- Folha de Estilos -->
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" type="image/png" href="Assets/offer-icon.png"/>
+        <!-- <script>TAG GA4</script> TAG do GA4 viria aqui, mas como não tenho dominio (url) não consigo criar uma propriedade ficticia no GA4 para gerar um snippet de código real.-->
     </head>
 
     <body>
