--- a/termos.html
+++ b/termos.html
@@ -36,7 +36,7 @@
                             <ul class="navbar-nav gap-4">
                                 <li><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                                 <li><a class="nav-link" href="sobre.html">Sobre nós</a></li>
-                                <li><a class="nav-link" href="termos.html">Nossos Termos</a></li>
+                                <li><a class="nav-link" href="termos.html">Nossos termos</a></li>
                                 <li><a type="button" href="cadastro.html" class="btn btn-danger">Cadastro de Ofertas</a></li>                               
                             </ul>
                     </div>
