--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Encontre e compartilhe as melhores ofertas de informática! Catálogo colaborativo com promoções de várias lojas. Solicite e consulte ofertas exclusivas.">
         <meta name="author" content="Felipe Garrido - Web Developer">
         <!-- <meta name="robots" content="noindex"/> Essa TAG passa instruções para os robôs dos motores de pesquisa, mas como a instrução do robô é sempre "follow" e eu não desejo configuar exceções para indexação das páginas deixarei essa tag comentada.-->    
-        <title>TECH DEAL: Compartilhe e encontre as melhores ofertas em informática</title>
+        <title>Cadastro de Ofertas - TECH DEAL: Promoções de Informática</title>
         <!-- Bootstrap CDN Link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- Folha de Estilos -->
