--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <div class="d-flex justify-content-center align-items-center gap-1">
                         <img class="img-fluid" src="Assets/offer-icon.png" width="30px" height="30px" alt="">
-                        <a class="navbar-brand m-0" id="logo" href="index.html">TECH DEAL</a>
+                        <a class="navbar-brand m-0 logo" href="index.html">TECH DEAL</a>
                     </div>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,10 +63,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/headset-hp-dhh-1601-drivers-40mm-preto-194s3aa_1701443031_g.jpeg" class="card-img-top img-fluid" alt="Headset HP DHH-1601   Som de alta qualidade: Possui alto-falantes de 40 mm que proporcionam som de alta qualidade, com graves ricos e agudos nítidos.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Headset HP DHH-1601, Drivers 40mm, Preto - 194S3AA</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 49,00</p>
+                                <h6 class="card-title product-title">Headset HP DHH-1601, Drivers 40mm, Preto - 194S3AA</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 49,00</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="https://www.kabum.com.br/produto/470368/headset-hp-dhh-1601-drivers-40mm-preto-194s3aa">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="https://www.kabum.com.br/produto/470368/headset-hp-dhh-1601-drivers-40mm-preto-194s3aa">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
@@ -76,10 +76,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/mouse-logitech-m90-preto-1000dpi-910-004053_1614368505_g.jpeg" class="card-img-top img-fluid" alt="Mouse com fio USB Logitech M90 com design ambidestro, fácil configuração (plug and play) e rastreamento óptico de alta definição.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Mouse com fio USB Logitech M90 com Design Ambidestro e Facilidade Plug and Play - 910-004053</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 28,80</p>
+                                <h6 class="card-title product-title">Mouse com fio USB Logitech M90 com Design Ambidestro e Facilidade Plug and Play - 910-004053</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 28,80</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="https://www.kabum.com.br/produto/49461/mouse-com-fio-usb-logitech-m90-com-design-ambidestro-e-facilidade-plug-and-play-910-004053">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="https://www.kabum.com.br/produto/49461/mouse-com-fio-usb-logitech-m90-com-design-ambidestro-e-facilidade-plug-and-play-910-004053">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
@@ -89,10 +89,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/teclado-logitech-k120-abnt2-920-004423_1614628451_g.jpeg" class="card-img-top img-fluid" alt="Teclado com fio USB Logitech K120 resistente à respingos, layout ABNT2 e teclas de baixo perfil que garantem um digitar mais silencioso.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Teclado com fio USB Logitech K120 Resistente à Respingos e Layout ABNT2 -920-004423</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 63,99</p>
+                                <h6 class="card-title product-title">Teclado com fio USB Logitech K120 Resistente à Respingos e Layout ABNT2 -920-004423</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 63,99</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="https://www.kabum.com.br/produto/20866/teclado-com-fio-usb-logitech-k120-resistente-a-respingos-e-layout-abnt2-920-004423">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="https://www.kabum.com.br/produto/20866/teclado-com-fio-usb-logitech-k120-resistente-a-respingos-e-layout-abnt2-920-004423">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
@@ -102,10 +102,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/teclado-e-mouse-logitech-mk120-resistente-a-agua-1000dpi-preto-abnt2-920-004429_1614630286_g.jpeg" class="card-img-top img-fluid" alt="Kit Teclado e Mouse com fio USB Logitech MK120 com Design Confortável, Durável e Resistente à Respingos e Layout ABNT2.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Kit Teclado e Mouse com fio USB Logitech MK120 com Design Confortável, Durável e Resistente à Respingos e Layout ABNT2 - 920-004429</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 89,99</p>
+                                <h6 class="card-title product-title">Kit Teclado e Mouse com fio USB Logitech MK120 com Design Confortável, Durável e Resistente à Respingos e Layout ABNT2 - 920-004429</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 89,99</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="#">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="#">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
@@ -115,10 +115,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/base-gamer-para-notebook-c3tech-led-ate-15-6-6x-fan-preto-nbc-70bk_1658439928_g.jpeg" class="card-img-top img-fluid" alt="Base Gamer para Notebook C3Tech com 5 opções de inclinação, 6 coolers fan, painel digital para controle, iluminação em LED, porta USB adicional, além de um design moderno e despojado. Compatível com notebooks de até 15,6 polegadas.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Base Gamer para Notebook C3Tech, LED, Até 15.6, 6x Fan, Preto - NBC-70BK</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 77,00</p>
+                                <h6 class="card-title product-title">Base Gamer para Notebook C3Tech, LED, Até 15.6, 6x Fan, Preto - NBC-70BK</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 77,00</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="Base Gamer para Notebook C3Tech, LED, Até 15.6, 6x Fan, Preto - NBC-70BK">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="Base Gamer para Notebook C3Tech, LED, Até 15.6, 6x Fan, Preto - NBC-70BK">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
@@ -128,10 +128,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="Assets/webcam-logitech-c270-hd-com-3-mp-para-chamadas-e-gravacoes-em-video-widescreen-720p-960-000694_1614360613_g.jpeg" class="card-img-top img-fluid" alt="Webcam HD Logitech C270, 720p, 30 FPS, Microfone Integrado, USB 2.0.">
                             <div class="card-body">
-                                <h6 class="card-title" id="product-title">Webcam HD Logitech C270, 720p, 30 FPS, Microfone Integrado, USB 2.0 - 960-000694</h6>                            
-                                <p class="card-text mb-2" id="product-price">R$ 219,99</p>
+                                <h6 class="card-title product-title">Webcam HD Logitech C270, 720p, 30 FPS, Microfone Integrado, USB 2.0 - 960-000694</h6>                            
+                                <p class="card-text mb-2 product-price">R$ 219,99</p>
                                 <div class="d-flex justify-content-center">
-                                    <a type="button" target="_blank" class="btn px-5" id="button-compre" href="https://www.kabum.com.br/produto/37697/webcam-hd-logitech-c270-720p-30-fps-microfone-integrado-usb-2-0-960-000694">COMPRE JÁ!</a>
+                                    <a type="button" target="_blank" class="btn px-5 button-compre" href="https://www.kabum.com.br/produto/37697/webcam-hd-logitech-c270-720p-30-fps-microfone-integrado-usb-2-0-960-000694">COMPRE JÁ!</a>
                                 </div>                            
                             </div>
                         </div>
