--- a/sobre.html
+++ b/sobre.html
@@ -72,27 +72,27 @@
                             
                 <ul class="list-unstyled d-flex mb-0">
                     <li class="ms-3">
-                        <a href="https://www.instagram.com" target="_blank" class="text-white">
+                        <a href="https://www.instagram.com" alt="Clique para ir até a nossa página no Instagram." target="_blank" class="text-white">
                             <i class="fab fa-instagram fa-lg"></i>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a href="https://www.facebook.com" target="_blank" class="text-white">
+                        <a href="https://www.facebook.com" alt=" Clique para ir até a nossa página no Facebook." target="_blank" class="text-white">
                             <i class="fab fa-facebook fa-lg"></i>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a href="https://www.twitter.com" target="_blank" class="text-white">
+                        <a href="https://www.twitter.com" alt="Clique para ir até a nossa página no Twitter." target="_blank" class="text-white">
                             <i class="fab fa-twitter fa-lg"></i>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a href="https://www.tiktok.com" target="_blank" class="text-white">
+                        <a href="https://www.tiktok.com" alt="Clique para ir até a nossa página no TikTok." target="_blank" class="text-white">
                             <i class="fab fa-tiktok fa-lg"></i>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a href="#" class="text-white" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
+                        <a href="#" class="text-white" alt="Clique para voltar ao início da página." onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
                             <i class="fas fa-arrow-up fa-lg"></i>
                         </a>
                     </li>
