--- a/cadastro-de-ofertas.html
+++ b/cadastro-de-ofertas.html
@@ -35,9 +35,9 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="flex-grow: unset;">
                             <ul class="navbar-nav gap-4">
                                 <li><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
-                                <li><a class="nav-link" href="sobre.html">Sobre nós</a></li>
-                                <li><a class="nav-link" href="termos.html">Nossos termos</a></li>
-                                <li><a type="button" href="cadastro.html" class="btn btn-danger">Cadastro de Ofertas</a></li>              
+                                <li><a class="nav-link" href="sobre-nos.html">Sobre nós</a></li>
+                                <li><a class="nav-link" href="termos-e-condicoes.html">Nossos termos</a></li>
+                                <li><a type="button" href="cadastro-de-ofertas.html" class="btn btn-danger">Cadastro de Ofertas</a></li>              
                             </ul>
                     </div>
 
