--- a/termos-e-condicoes.html
+++ b/termos-e-condicoes.html
@@ -37,7 +37,7 @@
                                 <li><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                                 <li><a class="nav-link" href="sobre-nos.html">Sobre nós</a></li>
                                 <li><a class="nav-link" href="termos-e-condicoes.html">Nossos termos</a></li>
-                                <li><a type="button" href="cadastro-de-ofertas.html" class="btn btn-danger">Cadastro de Ofertas</a></li>                               
+                                <li><a type="button" href="cadastro-de-ofertas.html" class="btn button-nav-cadastro">Cadastro de Ofertas</a></li>                               
                             </ul>
                     </div>
 
