--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
 
             <section class="container py-3">            
                 
-                <div class="d-flex justify-content-center align-items-center rounded" id="section-offers-title">
-
-                    <h1 class="text-white mb-0">MELHORES OFERTAS</h1>
-
-                </div>
+                <h1 class="mb-4 text-center">Melhores Ofertas</h1>                  
                 
                 <div class="row gap-5">
 
