--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -51,15 +51,15 @@
 
             <section class="container py-3">
                 
-                <h2 class="px-5 mb-3 section-about-title">Sobre nós!</h2>
+                <h1 class="px-5 mb-3">Sobre nós!</h1>
 
                 <figure class="px-5 my-4">
                     <img src="Assets/sobre_nos-cover-image.jpg" class="img-fluid rounded-4" alt="Imagem meramente ilustrativa da seção sobre nós.">
                 </figure>
                                     
-                <p class="px-5 section-about-paragraph">No nosso catálogo de ofertas de informática colaborativo, unimos tecnologia e comunidade para garantir que você sempre encontre as <strong>melhores promoções</strong>. Aqui, não somos apenas um site de ofertas, mas uma plataforma onde os próprios usuários contribuem para trazer produtos de informática de diversas lojas virtuais a <strong>preços imbatíveis</strong>. Seja para montar o seu setup gamer ou para encontrar aquele acessório indispensável, nossa comunidade está sempre ativa para ajudar você a <strong>economizar</strong>.</p>
-                <p class="px-5 section-about-paragraph">Nosso diferencial é a colaboração. Além de consultar ofertas já cadastradas, você pode solicitar o cadastro de novas promoções que encontrou em outras lojas online. Dessa forma, juntos, construímos o catálogo mais completo e atualizado de ofertas de informática. Valorizamos a participação de cada usuário, e é essa união que torna a nossa plataforma única e poderosa.</p>                
-                <p class="px-5 section-about-paragraph">Acreditamos que a tecnologia deve ser acessível a todos, e é por isso que nos dedicamos a reunir as <strong>melhores ofertas</strong> em um só lugar. Com nosso catálogo colaborativo, <strong>você economiza tempo e dinheiro</strong>, encontrando tudo o que precisa de forma prática e segura. Junte-se à nossa comunidade e faça parte dessa revolução no mundo das compras de informática!</p>
+                <p class="px-5 paragraph-sobre-nos">No nosso catálogo de ofertas de informática colaborativo, unimos tecnologia e comunidade para garantir que você sempre encontre as <strong>melhores promoções</strong>. Aqui, não somos apenas um site de ofertas, mas uma plataforma onde os próprios usuários contribuem para trazer produtos de informática de diversas lojas virtuais a <strong>preços imbatíveis</strong>. Seja para montar o seu setup gamer ou para encontrar aquele acessório indispensável, nossa comunidade está sempre ativa para ajudar você a <strong>economizar</strong>.</p>
+                <p class="px-5 paragraph-sobre-nos">Nosso diferencial é a colaboração. Além de consultar ofertas já cadastradas, você pode solicitar o cadastro de novas promoções que encontrou em outras lojas online. Dessa forma, juntos, construímos o catálogo mais completo e atualizado de ofertas de informática. Valorizamos a participação de cada usuário, e é essa união que torna a nossa plataforma única e poderosa.</p>                
+                <p class="px-5 paragraph-sobre-nos">Acreditamos que a tecnologia deve ser acessível a todos, e é por isso que nos dedicamos a reunir as <strong>melhores ofertas</strong> em um só lugar. Com nosso catálogo colaborativo, <strong>você economiza tempo e dinheiro</strong>, encontrando tudo o que precisa de forma prática e segura. Junte-se à nossa comunidade e faça parte dessa revolução no mundo das compras de informática!</p>
 
             </section>     
 
