--- a/cadastro-de-ofertas.html
+++ b/cadastro-de-ofertas.html
@@ -120,7 +120,7 @@
                         </div>
                     </fieldset>
                     
-                    <p class="mt-3 mb-0 lh-base paragraph-cadastro-de-ofertas">Ao clicar no botão "Cadastrar Oferta" você concorda com os <a href="termos.html">Termos e Condições</a> da TECH DEAL para o uso do site, bem como para o Cadastro de Ofertas e demais funcionalidades.</p>
+                    <p class="mt-3 mb-0 lh-base paragraph-cadastro-de-ofertas">Ao clicar no botão "Cadastrar Oferta" você concorda com os <a href="termos-e-condicoes.html">Termos e Condições</a> da TECH DEAL para o uso do site, bem como para o Cadastro de Ofertas e demais funcionalidades.</p>
 
                     <button type="submit" class="btn fs-5 p-2 mt-3 button-cadastrar">Cadastrar Oferta</button>
                 </form>
