--- a/cadastro-de-ofertas.html
+++ b/cadastro-de-ofertas.html
@@ -19,7 +19,7 @@
 
         <header class="sticky-top">
 
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark p-4">
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark p-4">   
                 
                 <div class="container-fluid">
 
